# odyssai-core

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENCE  Makefile  Odyssai Workflow.drawio  README.md  conda-lock.yml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  environment-export.yml  environment.yml  fly.toml  gunicorn.conf.py  nginx.conf  pyproject.toml  requirements-export.txt  requirements.txt  start.sh  test_user_creation.py
.github/workflows/: build-and-deploy.yml  build-and-push.yml  deploy.yml  fly-deploy.yml
proxy/: nginx.conf
src/odyssai_core/: __main__.py  app.py  main.py
src/odyssai_core/config/: paths.py  settings.py
src/odyssai_core/constants/: interaction_cues.py  llm_models.py  prompt_questions.py
src/odyssai_core/db/: __init__.py  client.py  config.py  connection.py  examples.py  schemas.py
src/odyssai_core/helpers/: get_embedding_model.py
src/odyssai_core/modules/: validators.py
src/odyssai_core/routes/: api.py  characters.py  gameplay.py  system.py  users.py  worlds.py
src/odyssai_core/static/css/: style.css
src/odyssai_core/static/js/: script.js
src/odyssai_core/templates/: index.html
src/odyssai_core/utils/: audio_session.py  google_tts.py  i18n.py  prompt_truncation.py  whisper.py
src/odyssai_core/workflows/: ask_user_graph.py  context_graph.py  lore_graph.py  main_graph.py  story_graph.py  world_graph.py
